-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P1
-
Affects Version/s: 9, 10
-
Component/s: hotspot
-
b40
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8195568 | 11 | Vladimir Ivanov | P1 | Resolved | Fixed | b01 |
| JDK-8197707 | 10u-cpu | Vladimir Ivanov | P1 | Resolved | Fixed | master |
| JDK-8200997 | 10.0.2 | Unassigned | P1 | Resolved | Fixed | b01 |
| JDK-8195917 | 10.0.1 | Vladimir Ivanov | P1 | Resolved | Fixed | b01 |
super public class TestMethodResolution
version 52:0
{
public static Method "testMethod":"()V"
{
return;
}
public static Method "main":"([Ljava/lang/String;)V"
stack 1 locals 1
{
ldc MethodHandle REF_invokeStatic:
TestMethodResolution.testMethod:
"(LClassFoo;)V";
return;
}
}
- backported by
-
JDK-8195568 MethodHandle resolution should follow JVMS sequence of lookup by name & type before type descriptor resolution
-
- Resolved
-
-
JDK-8195917 MethodHandle resolution should follow JVMS sequence of lookup by name & type before type descriptor resolution
-
- Resolved
-
-
JDK-8197707 MethodHandle resolution should follow JVMS sequence of lookup by name & type before type descriptor resolution
-
- Resolved
-
-
JDK-8200997 MethodHandle resolution should follow JVMS sequence of lookup by name & type before type descriptor resolution
-
- Resolved
-
- relates to
-
JDK-8194963 SystemDictionary::link_method_handle_constant() can't link MethodHandle.invoke()/invokeExact()
-
- Closed
-
-
JDK-8195650 Method references to VarHandle accessors
-
- Resolved
-