8188145: MethodHandle resolution should follow JVMS sequence of lookup by name & type before type descriptor resolution

Reviewed-by: kvn, psandoz